--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ dependencies = [
     "onnx >= 1.12.0",
     "optimum >= 1.13.0",
     "setuptools",
-    "tensorrt-llm == 0.9.0",
-    "torch>=2.2.0a,<=2.3.0a",
+    "tensorrt-llm == 10.1.0",
+    "torch>=2.2.0a,<=2.3.1",
     "transformers >= 4.38.2",
     "pynvml"
 ]
